@@ -1,3 +1,10 @@
+2005-10-07  Don Porter  <dgp@users.sourceforge.net>
+
+	[kennykb-numerics-branch]
+
+	* generic/tclExecute.c:	Improved performance of comparison opcodes
+	and removed yet more dead code.
+
 2005-10-06  Don Porter  <dgp@users.sourceforge.net>
 
 	[kennykb-numerics-branch]
